--- a/.gitignore
+++ b/.gitignore
@@ -2855,3 +2855,14 @@ frontend/node_modules/yallist/LICENSE
 frontend/node_modules/yallist/package.json
 frontend/node_modules/yallist/README.md
 frontend/node_modules/yallist/yallist.js
+backend/logs/imageflow_20260118_201705.log
+backend/logs/imageflow_20260118_201852.log
+backend/logs/imageflow_20260118_202357.log
+backend/logs/imageflow_20260118_203440.log
+backend/logs/imageflow_20260118_204230.log
+backend/logs/imageflow_20260118_205439.log
+backend/logs/imageflow_20260118_210204.log
+backend/logs/imageflow_20260118_210403.log
+backend/logs/imageflow_20260118_211602.log
+backend/logs/imageflow_20260118_211911.log
+skills/skills.md
