--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+frontend/dist/
+
 frontend/node_modules/.package-lock.json
 frontend/node_modules/.bin/autoprefixer
 frontend/node_modules/.bin/autoprefixer.cmd
@@ -2866,3 +2868,34 @@ backend/logs/imageflow_20260118_210403.log
 backend/logs/imageflow_20260118_211602.log
 backend/logs/imageflow_20260118_211911.log
 skills/skills.md
+backend/build/bin/ImageFlow-dev.exe~
+backend/build/bin/python/converter.py
+backend/build/bin/python/worker.py
+backend/build/bin/python/__pycache__/converter.cpython-311.pyc
+backend/frontend/dist/index.css
+backend/frontend/dist/index.html
+backend/frontend/dist/assets/index-DB9YJf7i.js
+backend/frontend/dist/assets/index-DEtDAULm.js
+backend/frontend/dist/assets/index-PfpHtWf6.css
+backend/frontend/dist/vendor/tailwindcss.js
+backend/frontend/dist/index.css
+backend/frontend/dist/index.html
+backend/frontend/dist/assets/index-DB9YJf7i.js
+backend/frontend/dist/vendor/tailwindcss.js
+backend/logs/imageflow_20260119_095219.log
+backend/logs/imageflow_20260119_095355.log
+backend/logs/imageflow_20260119_100647.log
+backend/logs/imageflow_20260119_102806.log
+backend/logs/imageflow_20260119_104922.log
+backend/logs/imageflow_20260119_105337.log
+backend/logs/imageflow_20260119_105804.log
+backend/logs/imageflow_20260119_110741.log
+backend/logs/imageflow_20260119_111328.log
+backend/logs/imageflow_20260119_112144.log
+backend/logs/imageflow_20260119_114034.log
+backend/logs/imageflow_20260119_115700.log
+backend/logs/imageflow_20260119_120000.log
+frontend/dist/index.html
+frontend/dist/assets/index-CS-63DCk.css
+frontend/dist/assets/index-DHSEitk0.js
+frontend/dist/vendor/tailwindcss.js
