--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 frontend/dist/
+.venv/
+uv.lock
 
 frontend/node_modules/.package-lock.json
 frontend/node_modules/.bin/autoprefixer
@@ -2899,3 +2901,38 @@ frontend/dist/index.html
 frontend/dist/assets/index-CS-63DCk.css
 frontend/dist/assets/index-DHSEitk0.js
 frontend/dist/vendor/tailwindcss.js
+frontend/dist/index.html
+frontend/dist/assets/index-CS-63DCk.css
+frontend/dist/assets/index-DHSEitk0.js
+frontend/dist/vendor/tailwindcss.js
+backend/logs/imageflow_20260119_122653.log
+backend/logs/imageflow_20260119_123437.log
+backend/logs/imageflow_20260119_123922.log
+backend/logs/imageflow_20260119_124040.log
+backend/logs/imageflow_20260119_130650.log
+backend/logs/imageflow_20260119_131318.log
+backend/logs/imageflow_20260119_131509.log
+backend/logs/imageflow_20260119_150134.log
+backend/logs/imageflow_20260119_151843.log
+backend/logs/imageflow_20260119_153413.log
+backend/logs/imageflow_20260119_153626.log
+backend/logs/imageflow_20260119_154801.log
+backend/logs/imageflow_20260119_154812.log
+backend/logs/imageflow_20260119_155034.log
+backend/logs/imageflow_20260119_160559.log
+backend/logs/imageflow_20260119_162243.log
+backend/logs/imageflow_20260119_162733.log
+backend/logs/imageflow_20260119_163209.log
+backend/logs/imageflow_20260119_164609.log
+backend/build/bin/ImageFlow-dev.exe~
+backend/frontend/dist/index.css
+backend/frontend/dist/index.html
+backend/frontend/dist/assets/index-BYfJ4DHD.css
+backend/frontend/dist/assets/index-CVd4rDHO.js
+backend/frontend/dist/assets/index-DB9YJf7i.js
+backend/frontend/dist/vendor/tailwindcss.js
+frontend/dist/index.html
+frontend/dist/assets/index-CS-63DCk.css
+frontend/dist/assets/index-DHSEitk0.js
+frontend/dist/vendor/tailwindcss.js
+python/testdata/simple.svg
