--- a/.gitignore
+++ b/.gitignore
@@ -2936,3 +2936,48 @@ frontend/dist/assets/index-CS-63DCk.css
 frontend/dist/assets/index-DHSEitk0.js
 frontend/dist/vendor/tailwindcss.js
 python/testdata/simple.svg
+
+# Ignore all backend log files
+backend/logs/*.log
+backend/frontend/dist/index.html
+backend/frontend/dist/assets/index-3gB5S70Q.css
+backend/frontend/dist/assets/index-CPN1FRjO.js
+backend/build/bin/python/compressor.py
+backend/build/bin/python/converter.py
+backend/build/bin/python/info_viewer.py
+backend/build/bin/python/metadata_tool.py
+backend/build/bin/python/pdf_generator.py
+backend/build/bin/python/requirements.txt
+backend/build/bin/python/__pycache__/compressor.cpython-312.pyc
+backend/build/bin/python/__pycache__/converter.cpython-312.pyc
+backend/build/bin/python/__pycache__/info_viewer.cpython-312.pyc
+backend/build/bin/python/__pycache__/metadata_tool.cpython-312.pyc
+backend/build/bin/python/__pycache__/pdf_generator.cpython-312.pyc
+backend/build/bin/python/profiles/DisplayP3-v4.icc
+backend/build/bin/python/profiles/sRGB-v4.icc
+backend/build/bin/python/tests/test_info_viewer_metadata.py
+backend/build/bin/python/tests/__pycache__/test_info_viewer_metadata.cpython-312.pyc
+backend/frontend/dist/index.html
+python/__pycache__/compressor.cpython-312.pyc
+python/__pycache__/converter.cpython-312.pyc
+python/__pycache__/info_viewer.cpython-312.pyc
+python/__pycache__/metadata_tool.cpython-312.pyc
+python/__pycache__/pdf_generator.cpython-312.pyc
+python/tests/test_info_viewer_metadata.py
+python/tests/__pycache__/test_info_viewer_metadata.cpython-312.pyc
+test/jpg/133636435_p0.jpg
+test/jpg/135250016_p0.jpg
+test/jpg/135607237_p0.png
+test/jpg/135806808_p0.jpg
+test/jpg/G-JeAvGa0AElZGC_upscayl_3x_digital-art-4x.png
+test/jpg/G-NlytZaAAA0YRT.jpg
+test/jpg/G-OvG2EbIAAsrBH.jpg
+test/jpg/G-PBKRzXAAA_QpU.jpg
+test/jpg/G-PR1r_WYAERcz8.jpg
+test/jpg/G-PxaLRWwAAYGH6.jpg
+test/png/2bcda20b-6e0c-49dc-9487-721c80803418.png
+test/png/07fba44b-9722-4215-a249-43e7d5a6620f.png
+test/png/438d5629-2424-486b-aaef-d4dbd3b36882.png
+test/png/ChatGPT Image 2025年8月23日 21_49_28.png
+backend/frontend/dist/index.html
+backend/frontend/dist/index.html
