--- a/.gitignore
+++ b/.gitignore
@@ -8181,3 +8181,10 @@ backend/build/bin/ImageFlow.exe
 backend/frontend/dist/assets/index-BVBV0ciN.js
 backend/frontend/dist/assets/index-iXmgziiI.css
 backend/frontend/dist/index.html
+backend/frontend/dist/assets/index-BFscKoiZ.js
+backend/frontend/dist/assets/index-DOpEn_gi.css
+backend/build/bin/ImageFlow.exe
+backend/build/bin/ImageFlow.exe
+python/__pycache__/filter.cpython-312.pyc
+python/tests/test_filter_presets.py
+python/tests/__pycache__/test_filter_presets.cpython-312.pyc
