优化安装包运行时与绿色包审查流程

--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,8 @@ python/*.pyc
 # Wails / build outputs
 build/bin/
 backend/build/bin/
-backend/build/windows/installer/
+backend/build/windows/installer/*
+!backend/build/windows/installer/project.nsi
 backend/frontend/dist/
 backend/embedded_python/
 backend/embedded_python_runtime/
