--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
         working-directory: frontend
         run: npm ci
 
+      - name: Run frontend typecheck
+        working-directory: frontend
+        run: npm run typecheck
+
       - name: Run frontend tests
         working-directory: frontend
         run: npm run test
